# pedestrian_detection_CNN

./: README.md  pedestrian_detection_CNNs_detect.cpp  pedestrian_detection_CNNs_train_test_170714_0.cpp
pedestrian_detection_CNN/: CMakeLists.txt  main.cpp
pedestrian_detection_CNN/include/: common_tool.hpp  pedestrian_detection_CNNs_detector.hpp  pedestrian_detection_CNNs_feature.hpp  pedestrian_detection_CNNs_trainer.hpp
pedestrian_detection_CNN/map/: max_map.txt
pedestrian_detection_CNN/model/: Model_CNNs_20170727_115303_init_pos_400_neg_500_layer_210_80_2_train_1876_1994.xml
